# talky

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DESIGN.md  LOGGING.md  NOTES.md  PRODUCT.md  README.md  package-lock.json  pyproject.toml  talky_auth.py  talky_cli.py  test_auth.py
.desloppify/: config.json  config.json.bak  plan.json  plan.json.bak  progression.jsonl  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260502_150032.json  holistic_packet_20260502_150654.json
.desloppify/subagents/runs/20260502_150032/: holistic_issues_merged.json  run_summary.json
.desloppify/subagents/runs/20260502_150032/prompts/: batch-1.md  batch-10.md  batch-11.md  batch-12.md  batch-14.md  batch-15.md  batch-16.md  batch-17.md  batch-19.md  batch-2.md  batch-20.md  batch-3.md  batch-4.md  batch-5.md  batch-6.md  batch-7.md  batch-9.md
.desloppify/subagents/runs/20260502_150032/results/: batch-1.raw.txt  batch-10.raw.txt  batch-11.raw.txt  batch-12.raw.txt  batch-13.raw.txt  batch-14.raw.txt  batch-15.raw.txt  batch-16.raw.txt  batch-17.raw.txt  batch-18.raw.txt  batch-19.raw.txt  batch-2.raw.txt  batch-20.raw.txt  batch-3.raw.txt  batch-4.raw.txt  batch-5.raw.txt  batch-6.raw.txt  (+3 more)
.desloppify/subagents/runs/20260502_150654/: holistic_issues_merged.json  run_summary.json
client/: .gitignore  index.html  localhost-cert.pem  localhost-key.pem  package-lock.json  package.json  vite.config.https.ts  vite.config.ts
client/src/: config.ts  index.css  main.tsx
client/src/components/: App.tsx  AudioControl.tsx  BotVisualizer.tsx  ConversationPanelWithReasoning.tsx  EmptyState.tsx  LLMProfileSelect.tsx  MoreMenu.tsx  PermissionBanner.tsx  PickerTrigger.tsx  Reasoning.tsx  SessionControls.tsx  SessionSheet.tsx  StatusBadge.tsx  SteerModeChip.tsx  SteerModeToggle.tsx  TalkyTextInput.tsx  TranscriptExport.tsx  TranscriptPanel.tsx  VoicePickerSheet.tsx  VoiceProfileSelect.tsx  useVoiceProfiles.ts  useVoiceState.ts
client/src/components/ai-elements/: reasoning.tsx  shimmer.tsx
client/src/components/ui/: command.tsx
client/src/fixtures/: DevPicker.tsx  harness.ts  messages.ts
client/src/hooks/: useTurns.ts
client/src/messages/: adapter.ts  export.ts  types.ts  useTalkyMessages.ts
desktop/tauri/: .gitignore
desktop/tauri/frontend/: index.html
desktop/tauri/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/tauri/src-tauri/icons/: icon.icns
desktop/tauri/src-tauri/src/: lib.rs  main.rs
desktop/zero-native/: README.md  app.zon  build-app.sh  build.zig  build.zig.zon
desktop/zero-native/frontend/: package-lock.json  package.json
desktop/zero-native/src/: main.zig
docs/: MCP-Server-Dual-Protocol-Architecture.md  MCP-Server-as-Main-Server-with-MCP-Layer.md  Pipeline-Comparison-Server-vs-MCP.md  Unified-Voice-Pipelines-with-Switching-API-Two-Fucking-Fails-in-a-Fucking-Row.md  Voice-Architecture-Analysis-Based-on-Actual-Code.md  remote-access.md
docs/integrations/: claude-code.md  claude-skill.md  mcp.md  moltis.md  openclaw.md  pi.md
extensions/claude-voice/: index.mjs  package-lock.json  package.json
extensions/pi-voice/: extension.ts
mcp-server/: README.md  pyproject.toml  test_server_starts.sh
mcp-server/src/pipecat_mcp_server/: agent.py  agent_ext_llm_service.py  agent_ipc.py  bot.py  channel.py  daemon_bridge.py  event_bus.py  mcp_driver_llm_service.py  pi_ext_llm_service.py  proxy.py  server.py  services_factory.py  talky_turn.py
mcp-server/tests/: test_channel_greeting.py  test_channel_switch.py  test_channel_ttl.py  test_request_leave.py
pi-extension/: index.ts  test.ts
scripts/: generate-certs.sh  install-claude-skill.sh  kill-talky.sh
scripts/smoke/: smoke_backends.py  smoke_mcp.py
server/: bot.py  lazy_voice_switcher.py  logging_config.py  main.py  provider_voice_switcher.py  pyproject.toml  say_command.py  server-cert.pem  server-key.pem  transcribe.py  tts_client.py  tts_daemon.py  voice_client.py  voice_daemon.py
server/backends/: __init__.py  amp.py  base.py  claude_code.py  hermes.py  moltis.py  openclaw.py  opencode.py  pi.py  pi_rpc.py
server/config/: __init__.py  profile_manager.py  voice_prompts.py
server/config/core/: llm-backends.yaml  talky-profiles.yaml  voice-backends.yaml
server/config/defaults/: llm-backends.yaml  settings.yaml  talky-profiles.yaml  voice-backends.yaml  voice-profiles.yaml
server/features/: __init__.py  voice_switcher.py
server/scripts/: README.md  kill_opencv.sh
server/tests/: __init__.py  test_config.py  test_daemon_protocol.py  test_greeting_resolution.py  test_moltis_backend.py  test_moltis_connection.py  test_opencode_backend.py
shared/: __init__.py  audio_cues.py  client_launcher.py  daemon_protocol.py  dependency_installer.py  network_utils.py  profile_manager.py  service_factory.py  voice_config.py
skills/talky/: SKILL.md
skills/talky-skill/: SKILL.md
spikes/: embedded_webrtc_spike.py  llm_switcher_spike.py
tests/: test_cli_smoke.py
(+13 files in other folders)
