[project]
name = "talky"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pipecat-ai[runner,silero,webrtc]",
    "pyyaml",
    "loguru",
]
# Provider-specific extras (deepgram, google, kokoro, elevenlabs, etc.) are
# installed on-demand by shared/dependency_installer.py based on the active profile.
# Note: opencv-python excluded to avoid AVFoundation symbol conflicts with 'av' library

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]
vision = [
    "opencv-python>=4.0.0",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
